# realdev

./: .gitignore  Cargo.toml  Dockerfile  README.md  SOLUTIONS.md  docker-compose.yml  render.yaml
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.css  App.tsx
grader/: Cargo.toml
grader/migrations/: 20260101000001_accounts.sql
grader/src/: db_api.rs  main.rs  problems.rs  runner.rs
problems/p001-list-users/: README.md  solution.rs
problems/p002-get-user/: solution.rs
problems/p003-create-user/: solution.rs
problems/p004-user-stats/: solution.rs
problems/p005-update-user/: solution.rs
server/: Cargo.toml
server/migrations/: 20260101000002_problems_schema.sql  20260101000003_seed_problems.sql
server/src/: auth.rs  db_api.rs  main.rs  problems.rs  runner.rs
shared/src/: lib.rs
student-cli/: Cargo.toml
student-cli/src/: main.rs
web/: package-lock.json
web/src/: App.css  App.tsx  index.css
